wip: update to dsf 2.1.0