@@ -4,7 +4,6 @@ import static org.hl7.fhir.r4.model.DocumentReference.ReferredDocumentStatus.FIN
 import static org.hl7.fhir.r4.model.Enumerations.DocumentReferenceStatus.CURRENT;
 
 import java.io.BufferedInputStream;
-import java.io.IOException;
 import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.security.PrivateKey;
@@ -13,8 +12,6 @@ import java.util.Date;
 import java.util.List;
 import java.util.Objects;
 
-import org.camunda.bpm.engine.delegate.BpmnError;
-import org.camunda.bpm.engine.delegate.DelegateExecution;
 import org.hl7.fhir.instance.model.api.IBaseBundle;
 import org.hl7.fhir.r4.model.Binary;
 import org.hl7.fhir.r4.model.Bundle;
@@ -29,132 +26,113 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.InitializingBean;
 
+import ca.uhn.fhir.rest.client.api.IGenericClient;
 import de.medizininformatik_initiative.process.data_sharing.ConstantsDataSharing;
 import de.medizininformatik_initiative.processes.common.crypto.KeyProvider;
-import de.medizininformatik_initiative.processes.common.crypto.RsaAesGcmUtil;
-import de.medizininformatik_initiative.processes.common.fhir.client.FhirClientFactory;
-import de.medizininformatik_initiative.processes.common.mimetype.MimeTypeHelper;
 import de.medizininformatik_initiative.processes.common.util.ConstantsBase;
 import de.medizininformatik_initiative.processes.common.util.DataSetStatusGenerator;
-import dev.dsf.bpe.v1.ProcessPluginApi;
-import dev.dsf.bpe.v1.activity.AbstractServiceDelegate;
-import dev.dsf.bpe.v1.constants.NamingSystems;
-import dev.dsf.bpe.v1.variables.Variables;
+import de.medizininformatik_initiative.processes.common.util.MimeTypeHelper;
+import dev.dsf.bpe.v2.ProcessPluginApi;
+import dev.dsf.bpe.v2.activity.ServiceTask;
+import dev.dsf.bpe.v2.client.dsf.DelayStrategy;
+import dev.dsf.bpe.v2.client.dsf.DsfClient;
+import dev.dsf.bpe.v2.constants.NamingSystems;
+import dev.dsf.bpe.v2.error.ErrorBoundaryEvent;
+import dev.dsf.bpe.v2.service.DsfClientProvider;
+import dev.dsf.bpe.v2.service.FhirClientProvider;
+import dev.dsf.bpe.v2.variables.Variables;
 import jakarta.ws.rs.core.MediaType;
 
-public class DecryptValidateAndInsertDataSet extends AbstractServiceDelegate implements InitializingBean
+public class DecryptValidateAndInsertDataSet implements ServiceTask, InitializingBean
 {
 	private static final Logger logger = LoggerFactory.getLogger(DecryptValidateAndInsertDataSet.class);
 
+	private final String fhirStoreId;
 	private final KeyProvider keyProvider;
-	private final MimeTypeHelper mimeTypeHelper;
-	private final FhirClientFactory fhirClientFactory;
 	private final DataSetStatusGenerator statusGenerator;
 
-	public DecryptValidateAndInsertDataSet(ProcessPluginApi api, KeyProvider keyProvider, MimeTypeHelper mimeTypeHelper,
-			FhirClientFactory fhirClientFactory, DataSetStatusGenerator statusGenerator)
+	public DecryptValidateAndInsertDataSet(String fhirStoreId, KeyProvider keyProvider,
+			DataSetStatusGenerator statusGenerator)
 	{
-		super(api);
-
+		this.fhirStoreId = fhirStoreId;
 		this.keyProvider = keyProvider;
-		this.mimeTypeHelper = mimeTypeHelper;
-		this.fhirClientFactory = fhirClientFactory;
 		this.statusGenerator = statusGenerator;
 	}
 
 	@Override
 	public void afterPropertiesSet() throws Exception
 	{
-		super.afterPropertiesSet();
-
 		Objects.requireNonNull(keyProvider, "keyProvider");
-		Objects.requireNonNull(mimeTypeHelper, "mimeTypeHelper");
-		Objects.requireNonNull(fhirClientFactory, "fhirClientFactory");
 		Objects.requireNonNull(statusGenerator, "statusGenerator");
 	}
 
 	@Override
-	protected void doExecute(DelegateExecution execution, Variables variables)
+	public void execute(ProcessPluginApi api, Variables variables)
 	{
 		Task task = variables.getLatestTask();
 
 		List<Resource> encryptedResources = variables
-				.getResourceList(ConstantsDataSharing.BPMN_EXECUTION_VARIABLE_TRANSFER_DATA_RESOURCES);
-		String localOrganizationIdentifier = getLocalOrganizationIdentifier();
+				.getFhirResourceList(ConstantsDataSharing.BPMN_EXECUTION_VARIABLE_TRANSFER_DATA_RESOURCES);
 		String sendingOrganizationIdentifier = getSendingOrganizationIdentifier(variables);
 		String projectIdentifier = variables.getString(ConstantsDataSharing.BPMN_EXECUTION_VARIABLE_PROJECT_IDENTIFIER);
 
 		logger.info(
-				"Decrypting, validating and inserting data-set from organization '{}' with project-identifier '{}' referenced in Task with id '{}'",
-				sendingOrganizationIdentifier, projectIdentifier, task.getId());
+				"Decrypting, validating and inserting data-set from organization '{}' and project-identifier '{}' in Task '{}'",
+				sendingOrganizationIdentifier, projectIdentifier,
+				api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task));
 
 		try
 		{
-			ListResource resourceReferencesList = decryptValidateAndInsertResources(keyProvider.getPrivateKey(),
-					encryptedResources, sendingOrganizationIdentifier, localOrganizationIdentifier);
-			IdType documentReferenceId = createOrUpdateDocumentReference(sendingOrganizationIdentifier,
+			ListResource resourceReferencesList = decryptValidateAndInsertResources(api, keyProvider.getPrivateKey(),
+					encryptedResources);
+			IdType documentReferenceId = createOrUpdateDocumentReference(api, sendingOrganizationIdentifier,
 					projectIdentifier, resourceReferencesList, task).toUnqualified();
 
-			logger.info(
-					"Stored data-set in DocumentReference with id '{}' on FHIR store with baseUrl '{}' from organization '{}' with project-identifier '{}' referenced in Task with id '{}'",
-					documentReferenceId, fhirClientFactory.getFhirBaseUrl(), sendingOrganizationIdentifier,
-					projectIdentifier, task.getId());
+			logger.info("Stored DocumentReference '{}' from organization '{}' and project-identifier '{}' in Task '{}'",
+					documentReferenceId, sendingOrganizationIdentifier, projectIdentifier,
+					api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task));
 		}
 		catch (Exception exception)
 		{
+			String message = "Decrypt, validate or insert data-set failed" + ConstantsBase.EXCEPTION_MESSAGE_DIVIDER
+					+ exception.getMessage();
 			task.setStatus(Task.TaskStatus.FAILED);
 			task.addOutput(statusGenerator.createDataSetStatusOutput(
+					api.getProcessPluginDefinition().getResourceVersion(),
 					ConstantsBase.CODESYSTEM_DATA_SET_STATUS_VALUE_RECEIVE_ERROR,
-					ConstantsDataSharing.CODESYSTEM_DATA_SHARING,
-					ConstantsDataSharing.CODESYSTEM_DATA_SHARING_VALUE_DATA_SET_STATUS,
-					"Decrypt, validate or insert data-set failed"));
+					ConstantsDataSharing.CODESYSTEM_DATA_SHARING, api.getProcessPluginDefinition().getResourceVersion(),
+					ConstantsDataSharing.CODESYSTEM_DATA_SHARING_VALUE_DATA_SET_STATUS, message));
 			variables.updateTask(task);
 
-			logger.warn(
-					"Could not decrypt, validate or insert data-set from organization '{}' and project-identifier '{}' referenced in Task with id '{}' - {}",
-					task.getRequester().getIdentifier().getValue(),
-					variables.getString(ConstantsDataSharing.BPMN_EXECUTION_VARIABLE_PROJECT_IDENTIFIER), task.getId(),
-					exception.getMessage());
-
-			String error = "Decrypt, validate or insert data-set failed - " + exception.getMessage();
-			throw new BpmnError(ConstantsDataSharing.BPMN_EXECUTION_VARIABLE_DATA_SHARING_MERGE_RECEIVE_ERROR, error,
-					exception);
+			throw new ErrorBoundaryEvent(ConstantsBase.CODESYSTEM_DATA_SET_STATUS_VALUE_RECEIVE_ERROR, message);
 		}
-	}
-
-	private String getLocalOrganizationIdentifier()
-	{
-		return api.getOrganizationProvider().getLocalOrganizationIdentifierValue()
-				.orElseThrow(() -> new RuntimeException("LocalOrganizationIdentifierValue is null"));
 	}
 
 	private String getSendingOrganizationIdentifier(Variables variables)
 	{
-		return variables.getLatestTask().getRequester().getIdentifier().getValue();
+		return variables.getStartTask().getRequester().getIdentifier().getValue();
 	}
 
-	private ListResource decryptValidateAndInsertResources(PrivateKey privateKey, List<Resource> resources,
-			String sendingOrganizationIdentifier, String receivingOrganizationIdentifier)
+	private ListResource decryptValidateAndInsertResources(ProcessPluginApi api, PrivateKey privateKey,
+			List<Resource> resources)
 	{
 		ListResource binaryList = new ListResource();
 
-		resources.stream().flatMap(r -> doDecryptValidateAndInsertResource(privateKey, r, sendingOrganizationIdentifier,
-				receivingOrganizationIdentifier).stream()).forEach(binaryList::addEntry);
+		resources.stream().flatMap(r -> doDecryptValidateAndInsertResource(api, privateKey, r).stream())
+				.forEach(binaryList::addEntry);
 
 		return binaryList;
 	}
 
-	private List<ListResource.ListEntryComponent> doDecryptValidateAndInsertResource(PrivateKey privateKey,
-			Resource resource, String sendingOrganizationIdentifier, String receivingOrganizationIdentifier)
+	private List<ListResource.ListEntryComponent> doDecryptValidateAndInsertResource(ProcessPluginApi api,
+			PrivateKey privateKey, Resource resource)
 	{
 		List<ListResource.ListEntryComponent> binaryIds = new ArrayList<>();
 
 		if (resource instanceof ListResource list)
-			binaryIds.addAll(decryptValidateAndInsertDataStreams(list, privateKey, sendingOrganizationIdentifier,
-					receivingOrganizationIdentifier));
+			binaryIds.addAll(decryptValidateAndInsertDataStreams(api, list, privateKey));
 		else if (resource instanceof Binary binary)
-			binaryIds.add(decryptValidateAndInsertDataResource(binary, privateKey, sendingOrganizationIdentifier,
-					receivingOrganizationIdentifier));
+			binaryIds.add(decryptValidateAndInsertDataResource(api, binary, privateKey));
 		else
 			throw new RuntimeException(
 					"Expected resource type Binary or List, got '" + resource.getResourceType().name() + "'");
@@ -162,53 +140,44 @@ public class DecryptValidateAndInsertDataSet extends AbstractServiceDelegate imp
 		return binaryIds;
 	}
 
-	private List<ListResource.ListEntryComponent> decryptValidateAndInsertDataStreams(ListResource list,
-			PrivateKey privateKey, String sendingOrganizationIdentifier, String receivingOrganizationIdentifier)
+	private List<ListResource.ListEntryComponent> decryptValidateAndInsertDataStreams(ProcessPluginApi api,
+			ListResource list, PrivateKey privateKey)
 	{
 		return list.getEntry().stream().filter(ListResource.ListEntryComponent::hasItem)
 				.filter(e -> e.hasExtension(ConstantsDataSharing.EXTENSION_LIST_ENTRY_MIMETYPE))
-				.map(e -> decryptValidateAndInsertDataStream(e, privateKey, sendingOrganizationIdentifier,
-						receivingOrganizationIdentifier))
-				.toList();
+				.map(e -> decryptValidateAndInsertDataStream(api, e, privateKey)).toList();
 	}
 
-	private ListResource.ListEntryComponent decryptValidateAndInsertDataStream(ListResource.ListEntryComponent item,
-			PrivateKey privateKey, String sendingOrganizationIdentifier, String receivingOrganizationIdentifier)
+	private ListResource.ListEntryComponent decryptValidateAndInsertDataStream(ProcessPluginApi api,
+			ListResource.ListEntryComponent item, PrivateKey privateKey)
 	{
 		String mimeType = getMimeType(item);
-		InputStream inputStream = decryptDataStream(item, privateKey, sendingOrganizationIdentifier,
-				receivingOrganizationIdentifier);
-		validateDataStream(inputStream, mimeType);
-		return insertDataStream(inputStream, mimeType);
+		InputStream inputStream = decryptDataStream(api, item, privateKey);
+		validateDataStream(api, inputStream, mimeType);
+		return insertDataStream(api, inputStream, mimeType);
 	}
 
-	private ListResource.ListEntryComponent decryptValidateAndInsertDataResource(Binary resource, PrivateKey privateKey,
-			String sendingOrganizationIdentifier, String receivingOrganizationIdentifier)
+	private ListResource.ListEntryComponent decryptValidateAndInsertDataResource(ProcessPluginApi api, Binary resource,
+			PrivateKey privateKey)
 	{
-		Binary binary = decryptDataResource(resource, privateKey, sendingOrganizationIdentifier,
-				receivingOrganizationIdentifier);
-		validateDataResource(binary);
-		return insertDataResource(binary);
+		Binary binary = decryptDataResource(api, resource, privateKey);
+		validateDataResource(api, binary);
+		return insertDataResource(api, binary);
 	}
 
-	private InputStream decryptDataStream(ListResource.ListEntryComponent listEntry, PrivateKey privateKey,
-			String sendingOrganizationIdentifier, String receivingOrganizationIdentifier)
+	private InputStream decryptDataStream(ProcessPluginApi api, ListResource.ListEntryComponent listEntry,
+			PrivateKey privateKey)
 	{
 		try
 		{
 			IdType url = (IdType) listEntry.getItem().getReferenceElement();
 
-			InputStream inputStream = api.getFhirWebserviceClientProvider().getWebserviceClient(url.getBaseUrl())
-					.withRetry(ConstantsBase.DSF_CLIENT_RETRY_6_TIMES, ConstantsBase.DSF_CLIENT_RETRY_INTERVAL_5MIN)
+			InputStream inputStream = api.getDsfClientProvider().getByEndpointUrl(url.getBaseUrl())
+					.withRetry(ConstantsBase.DSF_CLIENT_RETRY_6_TIMES,
+							DelayStrategy.constant(ConstantsBase.DSF_CLIENT_RETRY_INTERVAL_5MIN))
 					.readBinary(url.getIdPart(), MediaType.valueOf(MediaType.APPLICATION_OCTET_STREAM));
 
-			inputStream = RsaAesGcmUtil.decrypt(privateKey, inputStream, sendingOrganizationIdentifier,
-					receivingOrganizationIdentifier);
-
-			if (!inputStream.markSupported())
-				inputStream = new BufferedInputStream(inputStream);
-
-			return inputStream;
+			return api.getCryptoService().createRsaKem().decrypt(inputStream, privateKey);
 		}
 		catch (Exception exception)
 		{
@@ -217,13 +186,11 @@ public class DecryptValidateAndInsertDataSet extends AbstractServiceDelegate imp
 		}
 	}
 
-	private Binary decryptDataResource(Binary binary, PrivateKey privateKey, String sendingOrganizationIdentifier,
-			String receivingOrganizationIdentifier)
+	private Binary decryptDataResource(ProcessPluginApi api, Binary binary, PrivateKey privateKey)
 	{
 		try
 		{
-			byte[] decrypted = RsaAesGcmUtil.decrypt(privateKey, binary.getData(), sendingOrganizationIdentifier,
-					receivingOrganizationIdentifier);
+			byte[] decrypted = api.getCryptoService().createRsaKem().decrypt(binary.getData(), privateKey);
 
 			String mimeType = getMimeType(binary);
 			return new Binary().setData(decrypted).setContentType(mimeType);
@@ -235,30 +202,29 @@ public class DecryptValidateAndInsertDataSet extends AbstractServiceDelegate imp
 		}
 	}
 
-	private void validateDataStream(InputStream inputStream, String mimeType)
+	private void validateDataStream(ProcessPluginApi api, InputStream inputStream, String mimeType)
 	{
-		try
-		{
-			mimeTypeHelper.validate(inputStream, mimeType);
-		}
-		catch (IOException e)
-		{
-			throw new RuntimeException(e);
-		}
+		if (!inputStream.markSupported())
+			inputStream = new BufferedInputStream(inputStream);
+
+		api.getMimeTypeService().validateWithException(inputStream, mimeType);
 	}
 
-	private void validateDataResource(Binary binary)
+	private void validateDataResource(ProcessPluginApi api, Binary binary)
 	{
-		String mimeType = mimeTypeHelper.getMimeType(binary);
-		byte[] data = mimeTypeHelper.getData(binary);
-		mimeTypeHelper.validate(data, mimeType);
+		String mimeType = MimeTypeHelper.getMimeType(binary);
+		byte[] data = MimeTypeHelper.getData(api.getFhirContext(), binary);
+		api.getMimeTypeService().validateWithException(data, mimeType);
 	}
 
-	private ListResource.ListEntryComponent insertDataStream(InputStream inputStream, String mimeType)
+	private ListResource.ListEntryComponent insertDataStream(ProcessPluginApi api, InputStream inputStream,
+			String mimeType)
 	{
 		try (InputStream in = inputStream)
 		{
-			IdType id = (IdType) fhirClientFactory.getBinaryStreamFhirClient().create(in, mimeType).getId();
+			DsfClient client = getDsfClientForFhirStore(api.getDsfClientProvider(), fhirStoreId);
+			IdType id = client.withMinimalReturn().createBinary(in, MediaType.valueOf(mimeType),
+					client.getBaseUrl() + "/DocumentReference");
 			return createListEntryComponent(id, mimeType);
 		}
 		catch (Exception exception)
@@ -268,12 +234,13 @@ public class DecryptValidateAndInsertDataSet extends AbstractServiceDelegate imp
 		}
 	}
 
-	private ListResource.ListEntryComponent insertDataResource(Binary binary)
+	private ListResource.ListEntryComponent insertDataResource(ProcessPluginApi api, Binary binary)
 	{
 		try
 		{
-			Resource resource = getResourceFromBytes(binary.getData(), binary.getContentType());
-			IdType id = (IdType) fhirClientFactory.getStandardFhirClient().create(resource).getId();
+			Resource resource = getResourceFromBytes(api, binary.getData(), binary.getContentType());
+			IdType id = getDsfClientForFhirStore(api.getDsfClientProvider(), fhirStoreId).create(resource)
+					.getIdElement();
 			return createListEntryComponent(id, binary.getContentType());
 		}
 		catch (Exception exception)
@@ -293,7 +260,7 @@ public class DecryptValidateAndInsertDataSet extends AbstractServiceDelegate imp
 		return entry;
 	}
 
-	private Resource getResourceFromBytes(byte[] data, String mimeType)
+	private Resource getResourceFromBytes(ProcessPluginApi api, byte[] data, String mimeType)
 	{
 		if ("application/fhir+xml".equals(mimeType))
 			return (Resource) api.getFhirContext().newXmlParser()
@@ -305,45 +272,49 @@ public class DecryptValidateAndInsertDataSet extends AbstractServiceDelegate imp
 			return new Binary().setData(data).setContentType(mimeType);
 	}
 
-	private IdType createOrUpdateDocumentReference(String sendingOrganization, String projectIdentifier,
-			ListResource resourceReferencesList, Task task)
+	private IdType createOrUpdateDocumentReference(ProcessPluginApi api, String sendingOrganization,
+			String projectIdentifier, ListResource resourceReferencesList, Task task)
 	{
-		List<DocumentReference> existingDocumentReferences = searchExistingDocumentReferences(sendingOrganization,
-				projectIdentifier, task.getId());
+		List<DocumentReference> existingDocumentReferences = searchExistingDocumentReferences(api, sendingOrganization,
+				projectIdentifier, task);
 
 		if (existingDocumentReferences.isEmpty())
 		{
 			logger.info(
-					"DocumentReference for project-identifier '{}' authored by '{}' does not exist yet, creating a new one on FHIR server with baseUrl '{}' referenced in Task with id '{}'",
-					projectIdentifier, sendingOrganization, fhirClientFactory.getFhirBaseUrl(), task.getId());
-			return createDocumentReference(sendingOrganization, projectIdentifier, resourceReferencesList);
+					"DocumentReference of organization {} and project-identifier '{}' does not exist yet, creating a new one on FHIR server '{}' in Task '{}'",
+					sendingOrganization, projectIdentifier, fhirStoreId,
+					api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task));
+			return createDocumentReference(api, sendingOrganization, projectIdentifier, resourceReferencesList);
 		}
 		else
 		{
 			if (existingDocumentReferences.size() > 1)
 				logger.warn(
-						"Found more than one DocumentReference for project-identifier '{}' authored by '{}' on FHIR server with baseUrl '{}' referenced in Task with id '{}', using the first '{}'",
-						projectIdentifier, sendingOrganization, fhirClientFactory.getFhirBaseUrl(),
-						existingDocumentReferences.get(0).getId(), task.getId());
+						"Found more than one DocumentReference of organization '{}' for project-identifier '{}' on FHIR server '{}' in Task '{}', using the first '{}'",
+						sendingOrganization, projectIdentifier, fhirStoreId,
+						existingDocumentReferences.getFirst().getId(),
+						api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task));
 
 			logger.info(
-					"DocumentReference for project-identifier '{}' authored by '{}' already exists, updating data-set on FHIR server with baseUrl '{}' referenced in Task with id '{}'",
-					projectIdentifier, sendingOrganization, fhirClientFactory.getFhirBaseUrl(), task.getId());
+					"DocumentReference of organization '{}' and project-identifier '{}' already exists, updating data-set on FHIR server '{}' in Task '{}'",
+					sendingOrganization, projectIdentifier, fhirStoreId,
+					api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task));
 
-			return updateDocumentReference(existingDocumentReferences.get(0), resourceReferencesList);
+			return updateDocumentReference(api, existingDocumentReferences.getFirst(), resourceReferencesList);
 		}
 	}
 
-	private List<DocumentReference> searchExistingDocumentReferences(String sendingOrganization,
-			String projectIdentifier, String taskId)
+	private List<DocumentReference> searchExistingDocumentReferences(ProcessPluginApi api, String sendingOrganization,
+			String projectIdentifier, Task task)
 	{
 		// workaround since not all fhir server used in MII support DocumentReference.author:identifier or
 		// DocumentReference.author:Organization.identifier search parameters. Therefore, filtering for author
 		// after loading all DocumentReferences for given project-identifier
 		try
 		{
-			Bundle searchResult = fhirClientFactory.getStandardFhirClient().getGenericFhirClient().search()
-					.forResource(DocumentReference.class)
+			IGenericClient client = getFhirClientForFhirStore(api.getFhirClientProvider(), fhirStoreId);
+
+			Bundle searchResult = client.search().forResource(DocumentReference.class)
 					.where(DocumentReference.IDENTIFIER.exactly()
 							.systemAndCode(ConstantsBase.NAMINGSYSTEM_MII_PROJECT_IDENTIFIER, projectIdentifier))
 					.returnBundle(Bundle.class).execute();
@@ -351,8 +322,7 @@ public class DecryptValidateAndInsertDataSet extends AbstractServiceDelegate imp
 			List<Bundle.BundleEntryComponent> entries = new ArrayList<>(searchResult.getEntry());
 			while (searchResult.getLink(IBaseBundle.LINK_NEXT) != null)
 			{
-				searchResult = fhirClientFactory.getStandardFhirClient().getGenericFhirClient().loadPage()
-						.next(searchResult).execute();
+				searchResult = client.loadPage().next(searchResult).execute();
 				entries.addAll(searchResult.getEntry());
 			}
 
@@ -367,14 +337,14 @@ public class DecryptValidateAndInsertDataSet extends AbstractServiceDelegate imp
 		catch (Exception exception)
 		{
 			logger.warn(
-					"Error while searching for existing DocumentReferences for project-identifier '{}' authored by '{}' on FHIR server with baseUrl '{}' in Task with id '{}'- {}",
-					projectIdentifier, sendingOrganization, fhirClientFactory.getFhirBaseUrl(), taskId,
-					exception.getMessage());
+					"Error while searching DocumentReferences of organization '{}' for project-identifier '{}' on FHIR server '{}' in Task '{}'- {}",
+					sendingOrganization, projectIdentifier, fhirStoreId,
+					api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task), exception.getMessage());
 			return List.of();
 		}
 	}
 
-	private IdType createDocumentReference(String sendingOrganization, String projectIdentifier,
+	private IdType createDocumentReference(ProcessPluginApi api, String sendingOrganization, String projectIdentifier,
 			ListResource resourceReferencesList)
 	{
 		DocumentReference documentReference = new DocumentReference().setStatus(CURRENT).setDocStatus(FINAL);
@@ -386,20 +356,21 @@ public class DecryptValidateAndInsertDataSet extends AbstractServiceDelegate imp
 
 		addAttachmentsToDocumentReference(documentReference, resourceReferencesList);
 
-		IdType documentReferenceId = (IdType) fhirClientFactory.getStandardFhirClient().create(documentReference)
-				.getResource().getIdElement();
+		IdType documentReferenceId = (IdType) getFhirClientForFhirStore(api.getFhirClientProvider(), fhirStoreId)
+				.create().resource(documentReference).execute().getId();
 
-		return getDmsFhirStoreAbsoluteId(documentReferenceId);
+		return getDmsFhirStoreAbsoluteId(api, documentReferenceId);
 	}
 
-	private IdType updateDocumentReference(DocumentReference documentReference, ListResource resourceReferencesList)
+	private IdType updateDocumentReference(ProcessPluginApi api, DocumentReference documentReference,
+			ListResource resourceReferencesList)
 	{
 		addAttachmentsToDocumentReference(documentReference, resourceReferencesList);
 
-		fhirClientFactory.getStandardFhirClient().getGenericFhirClient().update().resource(documentReference)
+		getFhirClientForFhirStore(api.getFhirClientProvider(), fhirStoreId).update().resource(documentReference)
 				.withId(documentReference.getIdElement().getIdPart()).execute();
 
-		return getDmsFhirStoreAbsoluteId(documentReference.getIdElement());
+		return getDmsFhirStoreAbsoluteId(api, documentReference.getIdElement());
 	}
 
 	private void addAttachmentsToDocumentReference(DocumentReference documentReference,
@@ -429,9 +400,21 @@ public class DecryptValidateAndInsertDataSet extends AbstractServiceDelegate imp
 		return item.getExtensionString(ConstantsDataSharing.EXTENSION_LIST_ENTRY_MIMETYPE);
 	}
 
-	private IdType getDmsFhirStoreAbsoluteId(IdType idType)
+	private IdType getDmsFhirStoreAbsoluteId(ProcessPluginApi api, IdType idType)
 	{
-		return new IdType(fhirClientFactory.getFhirBaseUrl(), idType.getResourceType(), idType.getIdPart(),
-				idType.getVersionIdPart());
+		return new IdType(getDsfClientForFhirStore(api.getDsfClientProvider(), fhirStoreId).getBaseUrl(),
+				idType.getResourceType(), idType.getIdPart(), idType.getVersionIdPart());
+	}
+
+	private DsfClient getDsfClientForFhirStore(DsfClientProvider provider, String fhirStoreId)
+	{
+		return provider.getById(fhirStoreId)
+				.orElseThrow(() -> new RuntimeException("DSF client '" + fhirStoreId + "' not configured"));
+	}
+
+	private IGenericClient getFhirClientForFhirStore(FhirClientProvider provider, String fhirStoreId)
+	{
+		return provider.getById(fhirStoreId)
+				.orElseThrow(() -> new RuntimeException("FHIR client '" + fhirStoreId + "' not configured"));
 	}
 }
