@@ -6,8 +6,6 @@ import java.util.Objects;
 import java.util.Optional;
 import java.util.stream.Stream;
 
-import org.camunda.bpm.engine.delegate.BpmnError;
-import org.camunda.bpm.engine.delegate.DelegateExecution;
 import org.hl7.fhir.r4.model.Attachment;
 import org.hl7.fhir.r4.model.Binary;
 import org.hl7.fhir.r4.model.DocumentReference;
@@ -21,139 +19,137 @@ import org.springframework.beans.factory.InitializingBean;
 
 import de.medizininformatik_initiative.process.data_sharing.ConstantsDataSharing;
 import de.medizininformatik_initiative.process.data_sharing.variables.DataResource;
-import de.medizininformatik_initiative.processes.common.fhir.client.logging.DataLogger;
 import de.medizininformatik_initiative.processes.common.util.ConstantsBase;
 import de.medizininformatik_initiative.processes.common.util.DataSetStatusGenerator;
-import dev.dsf.bpe.v1.ProcessPluginApi;
-import dev.dsf.bpe.v1.activity.AbstractServiceDelegate;
-import dev.dsf.bpe.v1.variables.Variables;
-import dev.dsf.fhir.client.BasicFhirWebserviceClient;
+import dev.dsf.bpe.v2.ProcessPluginApi;
+import dev.dsf.bpe.v2.activity.ServiceTask;
+import dev.dsf.bpe.v2.client.dsf.BasicDsfClient;
+import dev.dsf.bpe.v2.client.dsf.DelayStrategy;
+import dev.dsf.bpe.v2.error.ErrorBoundaryEvent;
+import dev.dsf.bpe.v2.service.TaskHelper;
+import dev.dsf.bpe.v2.variables.Variables;
 import jakarta.ws.rs.core.MediaType;
 
-public class DownloadDataSet extends AbstractServiceDelegate implements InitializingBean
+public class DownloadDataSet implements ServiceTask, InitializingBean
 {
 	private static final Logger logger = LoggerFactory.getLogger(DownloadDataSet.class);
 
 	private final DataSetStatusGenerator statusGenerator;
-	private final DataLogger dataLogger;
 	private final boolean fhirBinaryStreamWriteEnabled;
 
-	public DownloadDataSet(ProcessPluginApi api, DataSetStatusGenerator statusGenerator,
-			boolean fhirBinaryStreamWriteEnabled, DataLogger dataLogger)
+	public DownloadDataSet(DataSetStatusGenerator statusGenerator, boolean fhirBinaryStreamWriteEnabled)
 	{
-		super(api);
 		this.statusGenerator = statusGenerator;
 		this.fhirBinaryStreamWriteEnabled = fhirBinaryStreamWriteEnabled;
-		this.dataLogger = dataLogger;
 	}
 
 	@Override
 	public void afterPropertiesSet() throws Exception
 	{
-		super.afterPropertiesSet();
 		Objects.requireNonNull(statusGenerator, "statusGenerator");
-		Objects.requireNonNull(dataLogger, "dataLogger");
 	}
 
 	@Override
-	protected void doExecute(DelegateExecution execution, Variables variables)
+	public void execute(ProcessPluginApi api, Variables variables)
 	{
 		Task task = variables.getLatestTask();
 		String sendingOrganization = task.getRequester().getIdentifier().getValue();
 
 		String projectIdentifier = variables.getString(ConstantsDataSharing.BPMN_EXECUTION_VARIABLE_PROJECT_IDENTIFIER);
 
-		IdType documentReferenceLocation = getDocumentReferenceLocation(task, sendingOrganization, projectIdentifier);
+		IdType documentReferenceLocation = getDocumentReferenceLocation(api.getTaskHelper(), task, sendingOrganization,
+				projectIdentifier);
 		variables.setString(ConstantsDataSharing.BPMN_EXECUTION_VARIABLE_TRANSFER_DOCUMENT_REFERENCE_LOCATION,
 				documentReferenceLocation.getValue());
 
 		logger.info(
-				"Downloading data-set from organization '{}' for project-identifier '{}' referenced in Task with id '{}' (DocumentReference with id '{}' and its encrypted attachments)",
-				sendingOrganization, projectIdentifier, task.getId(), documentReferenceLocation.getValue());
+				"Downloading data-set from organization '{}' for project-identifier '{}' in Task '{}' (DocumentReference '{}' and its encrypted attachments)",
+				sendingOrganization, projectIdentifier, api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task),
+				documentReferenceLocation.getValue());
 
 		try
 		{
-			DocumentReference documentReference = readDocumentReference(documentReferenceLocation, sendingOrganization,
-					projectIdentifier, task.getId());
-			Stream<DataResource> attachments = readAttachments(documentReference);
-			List<Resource> resources = getResources(attachments, sendingOrganization, projectIdentifier, task.getId());
+			DocumentReference documentReference = readDocumentReference(api, documentReferenceLocation,
+					sendingOrganization, projectIdentifier, task);
+			Stream<DataResource> attachments = readAttachments(api, documentReference);
+			List<Resource> resources = getResources(attachments);
 
 			variables.setString(ConstantsDataSharing.BPMN_EXECUTION_VARIABLE_PROJECT_IDENTIFIER, projectIdentifier);
-			variables.setResource(ConstantsDataSharing.BPMN_EXECUTION_VARIABLE_TRANSFER_DOCUMENT_REFERENCE,
+			variables.setFhirResource(ConstantsDataSharing.BPMN_EXECUTION_VARIABLE_TRANSFER_DOCUMENT_REFERENCE,
 					documentReference);
-			variables.setResourceList(ConstantsDataSharing.BPMN_EXECUTION_VARIABLE_TRANSFER_DATA_RESOURCES, resources);
+			variables.setFhirResourceList(ConstantsDataSharing.BPMN_EXECUTION_VARIABLE_TRANSFER_DATA_RESOURCES,
+					resources);
 		}
 		catch (Exception exception)
 		{
+			String message = "Download data-set failed" + ConstantsBase.EXCEPTION_MESSAGE_DIVIDER
+					+ exception.getMessage();
 			task.setStatus(Task.TaskStatus.FAILED);
 			task.addOutput(statusGenerator.createDataSetStatusOutput(
+					api.getProcessPluginDefinition().getResourceVersion(),
 					ConstantsBase.CODESYSTEM_DATA_SET_STATUS_VALUE_RECEIVE_ERROR,
-					ConstantsDataSharing.CODESYSTEM_DATA_SHARING,
-					ConstantsDataSharing.CODESYSTEM_DATA_SHARING_VALUE_DATA_SET_STATUS, "Download data-set failed"));
+					ConstantsDataSharing.CODESYSTEM_DATA_SHARING, api.getProcessPluginDefinition().getResourceVersion(),
+					ConstantsDataSharing.CODESYSTEM_DATA_SHARING_VALUE_DATA_SET_STATUS, message));
 			variables.updateTask(task);
 
-			logger.warn(
-					"Could not download data-set from organization '{}' for project-identifier '{}' referenced in Task with id '{}' (DocumentReference with id '{}' and its encrypted attachments) - {}",
-					sendingOrganization, projectIdentifier, task.getId(), documentReferenceLocation.getValue(),
-					exception.getMessage());
-
-			String error = "Download data-set failed - " + exception.getMessage();
-			throw new BpmnError(ConstantsDataSharing.BPMN_EXECUTION_VARIABLE_DATA_SHARING_MERGE_RECEIVE_ERROR, error,
-					exception);
+			throw new ErrorBoundaryEvent(ConstantsBase.CODESYSTEM_DATA_SET_STATUS_VALUE_RECEIVE_ERROR, message);
 		}
 	}
 
-	private IdType getDocumentReferenceLocation(Task task, String sendingOrganization, String projectIdentifier)
+	private IdType getDocumentReferenceLocation(TaskHelper helper, Task task, String sendingOrganization,
+			String projectIdentifier)
 	{
-		List<String> dataSetReferences = api.getTaskHelper()
+		List<String> dataSetReferences = helper
 				.getInputParameters(task, ConstantsDataSharing.CODESYSTEM_DATA_SHARING,
 						ConstantsDataSharing.CODESYSTEM_DATA_SHARING_VALUE_DOCUMENT_REFERENCE_LOCATION, Reference.class)
 				.map(Task.ParameterComponent::getValue).filter(i -> i instanceof Reference).map(i -> (Reference) i)
 				.filter(Reference::hasReference).map(Reference::getReference).toList();
 
 		if (dataSetReferences.isEmpty())
-			throw new IllegalArgumentException("No DocumentReference reference present in Task.input");
+			throw new IllegalArgumentException("Task.input:document-reference-location missing");
 
 		if (dataSetReferences.size() > 1)
 			logger.warn(
-					"Found {} DocumentReference references from organization '{}' for project-identifier '{}' referenced in Task with id '{}', using only the first",
-					dataSetReferences.size(), sendingOrganization, projectIdentifier, task.getId());
+					"Found {} DocumentReference locations from organization '{}' and project-identifier '{}' in Task '{}', using only the first",
+					dataSetReferences.size(), sendingOrganization, projectIdentifier,
+					helper.getLocalVersionlessAbsoluteUrl(task));
 
-		return new IdType(dataSetReferences.get(0));
+		return new IdType(dataSetReferences.getFirst());
 	}
 
-	private DocumentReference readDocumentReference(IdType documentReferenceLocation, String sendingOrganization,
-			String projectIdentifier, String taskId)
+	private DocumentReference readDocumentReference(ProcessPluginApi api, IdType documentReferenceLocation,
+			String sendingOrganization, String projectIdentifier, Task task)
 	{
-		DocumentReference documentReference = api.getFhirWebserviceClientProvider()
-				.getWebserviceClient(documentReferenceLocation.getBaseUrl())
-				.withRetry(ConstantsBase.DSF_CLIENT_RETRY_6_TIMES, ConstantsBase.DSF_CLIENT_RETRY_INTERVAL_5MIN)
+		DocumentReference documentReference = api.getDsfClientProvider()
+				.getByEndpointUrl(documentReferenceLocation.getBaseUrl())
+				.withRetry(ConstantsBase.DSF_CLIENT_RETRY_6_TIMES,
+						DelayStrategy.constant(ConstantsBase.DSF_CLIENT_RETRY_INTERVAL_5MIN))
 				.read(DocumentReference.class, documentReferenceLocation.getIdPart(),
 						documentReferenceLocation.getVersionIdPart());
 
-		dataLogger
-				.logResource(
-						"DocumentReference from organization '" + sendingOrganization + "' for project-identifier '"
-								+ projectIdentifier + "' referenced in Task with id '" + taskId + "'",
-						documentReference);
+		api.getDataLogger()
+				.log("DocumentReference with project-identifier '" + projectIdentifier + "from organization '"
+						+ sendingOrganization + "' and Task '"
+						+ api.getTaskHelper().getLocalVersionlessAbsoluteUrl(task) + "'", documentReference);
 
 		return documentReference;
 	}
 
-	private Stream<DataResource> readAttachments(DocumentReference documentReference)
+	private Stream<DataResource> readAttachments(ProcessPluginApi api, DocumentReference documentReference)
 	{
 		return documentReference.getContent().stream()
 				.filter(DocumentReference.DocumentReferenceContentComponent::hasAttachment)
-				.map(DocumentReference.DocumentReferenceContentComponent::getAttachment).map(this::readAttachment);
+				.map(DocumentReference.DocumentReferenceContentComponent::getAttachment)
+				.map(a -> readAttachment(api, a));
 	}
 
-	private DataResource readAttachment(Attachment attachment)
+	private DataResource readAttachment(ProcessPluginApi api, Attachment attachment)
 	{
 		IdType attachmentId = new IdType(attachment.getUrl());
 
-		BasicFhirWebserviceClient client = api.getFhirWebserviceClientProvider()
-				.getWebserviceClient(attachmentId.getBaseUrl())
-				.withRetry(ConstantsBase.DSF_CLIENT_RETRY_6_TIMES, ConstantsBase.DSF_CLIENT_RETRY_INTERVAL_5MIN);
+		BasicDsfClient client = api.getDsfClientProvider().getByEndpointUrl(attachmentId.getBaseUrl()).withRetry(
+				ConstantsBase.DSF_CLIENT_RETRY_6_TIMES,
+				DelayStrategy.constant(ConstantsBase.DSF_CLIENT_RETRY_INTERVAL_5MIN));
 
 		String mimetype = getAttachmentMimeType(attachment);
 		if (fhirBinaryStreamWriteEnabled && !isMimetypeFhir(mimetype))
@@ -182,7 +178,7 @@ public class DownloadDataSet extends AbstractServiceDelegate implements Initiali
 						"Could not find any attachment contentType (mimeType) in DocumentReference"));
 	}
 
-	private InputStream readBinaryResource(BasicFhirWebserviceClient client, String id, String version)
+	private InputStream readBinaryResource(BasicDsfClient client, String id, String version)
 	{
 		MediaType mediaType = MediaType.valueOf(MediaType.APPLICATION_OCTET_STREAM);
 		if (version != null && !version.isEmpty())
@@ -191,15 +187,9 @@ public class DownloadDataSet extends AbstractServiceDelegate implements Initiali
 			return client.readBinary(id, mediaType);
 	}
 
-	private List<Resource> getResources(Stream<DataResource> dataResources, String sendingOrganization,
-			String projectIdentifier, String taskId)
+	private List<Resource> getResources(Stream<DataResource> dataResources)
 	{
-		return dataResources.map(DataResource::toResource).filter(Objects::nonNull)
-				.peek(r -> dataLogger.logResource(
-						"Read attachment from organization '" + sendingOrganization + "' for project-identifier '"
-								+ projectIdentifier + "' referenced in Task with id '" + taskId + "'",
-						r))
-				.toList();
+		return dataResources.map(DataResource::toResource).filter(Objects::nonNull).toList();
 	}
 
 	private boolean isMimetypeFhir(String mimetype)
